# AmiBot

./: .gitignore  LICENSE.txt  README.txt  chatbot.py  pyproject.toml
amibot/: LICENSE.txt  README.txt  chatbot.py  core.py  personality.py  pyproject.toml
amibot/amibot/: __init__.py  core.py  longterm_memory.json  personality.py
amibot/amibot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
amibot/amibot/logs/: conversation.txt
